# mini-gpt

./: .gitignore  README.md  diagram.js  index.html  scripts.js  styles.css
api/: attention.php  config.php  flash_attention.php  generate.php  health.php  inquiry_db.php  kakao_chat.php  kakao_uid.php  send_inquiry.php
back/: CMakeLists.txt  advanced_gpt.hpp  advanced_gpt_old.hpp  advanced_tensor.cpp  main.cpp
back/include/model/: transformer.hpp
transformer-viewer/: app.js  index.html  styles.css
